[package]
name = "nekocatmacrosapp"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["PAS-JP <pedro.augusto.schroeder@gmail.com>"]
description = "..."
repository = "https://github.com/PAS-JP/nekocat/macros/app"
homepage = "https://github.com/PAS-JP/nekocat/macros/app"
documentation = "https://github.com/PAS-JP/nekocat/macros/app/tests"
exclude = [
    "tests/*",
    "tests",
    "main.rs"
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.114", features = ["full", "visit", "visit-mut"] }
quote = "1.0.44"
proc-macro2 =  "1.0.106"

[dev-dependencies]
regex = { version = "1.12.3"}
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"]}
chrono = { version = "0.4.43"}
colorful = { version = "0.3.2"}
hex = { version = "0.4.3"}
rand = { version = "0.10.0"}
#pqcrypto-mlkem = { version = "0.1.1"}
#pqcrypto-mldsa = { version = "0.1.2"}
#pqcrypto-traits = { version = "0.3.5"}
#sha2 = "0.10.9"
#hkdf = "0.12.4"
aes-gcm-siv = { version = "0.11.1"}
chacha20poly1305 = { version = "0.10.1"}
argon2 = { version = "0.5.3"}
serde = { version = "1.0.228", features = ["derive"]}
tokio-postgres = "0.7.16"
rkyv = "0.8.15"


[features]
default = ["full"]
builder = []
cipher = ["chacha", "argon", "aes"]
aes = []
argon = []
chacha = []
#pqcrypto = []
print = []
math = []
parser = []
search = []
sql = []
path2enum = []
full = ["builder", "aes", "cipher", "argon", "chacha", "print", "math", "parser", "search", "sql", "path2enum"]
